--- a/RanCyan/RanCyan/Views/LotteryConfigPage.xaml
+++ b/RanCyan/RanCyan/Views/LotteryConfigPage.xaml
@@ -1,22 +1,44 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="RanCyan.Views.LotteryConfigPage"
              Title="{Binding Title.Value}">
 
-  <Grid>
-    <Grid.ColumnDefinitions>
-      <ColumnDefinition Width="*"/>
-      <ColumnDefinition Width="*"/>
-    </Grid.ColumnDefinitions>
-    <Grid Grid.Column="1">
-      <Picker 
+  <ContentPage Title="全体設定">
+    <TableView >
+      <TableRoot>
+        <TableSection Title="背景色">
+          <ViewCell>
+            <Picker ItemsSource="{Binding ImageBackColorList}" SelectedItem="{Binding ImageBackColor.Value}" BackgroundColor="{Binding ImageBackColor.Value}"/>
+          </ViewCell>
+        </TableSection>
+        <TableSection Title="抽選リスト部分の幅">
+          <ViewCell>
+            <Picker ItemsSource="{Binding SelectionViewWidthList}" SelectedItem="{Binding SelectionViewWidth.Value}" />
+          </ViewCell>
+        </TableSection>
+      </TableRoot>
+    </TableView>
+  </ContentPage>
+
+  <ContentPage Title="ページ設定">
+  </ContentPage>
+
+  <ContentPage Title="カテゴリ設定">
+    <Grid>
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="*"/>
+        <ColumnDefinition Width="*"/>
+      </Grid.ColumnDefinitions>
+      <Grid Grid.Column="1">
+        <Picker 
           ItemsSource="{Binding LotteryCategoryModels}" 
           SelectedItem="{Binding SelectedLotteryCategoryModel.Value}" 
           ItemDisplayBinding="{Binding Title}"/>
+      </Grid>
     </Grid>
-  </Grid>
-  
-</ContentPage>
+  </ContentPage>
+
+</TabbedPage>
