--- a/RanCyan/RanCyan/Views/LotteryUwpPage.xaml
+++ b/RanCyan/RanCyan/Views/LotteryUwpPage.xaml
@@ -41,7 +41,7 @@
       <Label Grid.Row="0" Style="{StaticResource LabelStyle}"
              Text="{Binding LotteryLabel.Value}" TextColor="{Binding LotteryLabelColor.Value}" IsVisible="{Binding LotteryLabelVisible.Value}"/>
       <!-- 乱ちゃんの3Dgif画像 -->
-      <Image Grid.Row="1" Aspect = "AspectFit" VerticalOptions ="FillAndExpand"
+      <!--<Image Grid.Row="1" Aspect = "AspectFit" VerticalOptions ="FillAndExpand"
              Source="{Binding RanCyanImage.Value, Converter={StaticResource ImageSourceConverter}}">
         <Image.Triggers>
           <DataTrigger TargetType="Image" Binding="{Binding IsImageActive.Value}" Value="True">
@@ -53,7 +53,7 @@
             </DataTrigger.ExitActions>
           </DataTrigger>
         </Image.Triggers>
-      </Image>
+      </Image>-->
     </Grid>
     <Grid Grid.Column="1">
       <Grid.RowDefinitions>
