単発と全体の挙動完成

--- a/RanCyan/RanCyan/Views/LotteryUwpPage.xaml
+++ b/RanCyan/RanCyan/Views/LotteryUwpPage.xaml
@@ -39,8 +39,11 @@
         <RowDefinition Height="4*"/>
       </Grid.RowDefinitions>
       <!-- 抽選結果(シングル) -->
-      <!--<Label Grid.Row="0" Style="{StaticResource LabelStyle}"
-             Text="{Binding LotteryLabelText.Value}" TextColor="{Binding LotteryLabelColor.Value}" IsVisible="{Binding LotteryLabelVisible.Value}"/>-->
+      <Label Grid.Row="0" 
+             Style="{StaticResource LabelStyle}"
+             Text="{Binding LotteryCategorySelectedModel.Value.LotteryLabelModel.Text}" 
+             TextColor="{Binding LotteryCategorySelectedModel.Value.LotteryLabelModel.Color}" 
+             IsVisible="{Binding IsNotAllToDraw.Value}"/>
       <!-- 抽選結果(オール) -->
       <ListView Grid.Row="0" Grid.RowSpan="2"
                 ItemsSource="{Binding LotteryCategoryModels}"
@@ -79,7 +82,7 @@
         </ListView.ItemTemplate>
       </ListView>
       <!-- 乱ちゃんの3Dgif画像 -->
-      <!--<Image Grid.Row="1" Aspect = "AspectFit" VerticalOptions ="FillAndExpand"
+      <Image Grid.Row="1" Aspect = "AspectFit" VerticalOptions ="FillAndExpand"
              Source="{Binding RanCyanImage.Value, Converter={StaticResource ImageSourceConverter}}">
         <Image.Triggers>
           <DataTrigger TargetType="Image" Binding="{Binding IsImageActive.Value}" Value="True">
@@ -91,7 +94,7 @@
             </DataTrigger.ExitActions>
           </DataTrigger>
         </Image.Triggers>
-      </Image>-->
+      </Image>
     </Grid>
     <Grid Grid.Column="1">
       <Grid.RowDefinitions>
