抽選部の幅設定を削除

--- a/RanCyan/RanCyan/Views/LotteryUwpPage.xaml
+++ b/RanCyan/RanCyan/Views/LotteryUwpPage.xaml
@@ -98,7 +98,7 @@
           <DataTemplate>
             <Grid VerticalOptions="FillAndExpand">
               <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="{Binding BindingContext.SelectionViewOneWidth.Value ,Source={x:Reference this}}" />
+                <ColumnDefinition Width="100" />
               </Grid.ColumnDefinitions>
               <views:LotteryCategorySelectionView BindingContext="{Binding}"/>
             </Grid>
