--- a/RanCyan/RanCyan/Views/LotteryMobilePage.xaml
+++ b/RanCyan/RanCyan/Views/LotteryMobilePage.xaml
@@ -2,11 +2,11 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com"
-             xmlns:views="clr-namespace:RanCyan.Views"
              xmlns:cv="clr-namespace:RanCyan.Converters"
              xmlns:local="clr-namespace:RanCyan.TriggerActions"
+             xmlns:views="clr-namespace:RanCyan.Views"
              prism:ViewModelLocator.AutowireViewModel="True"
-             x:Class="RanCyan.Views.LotteryUwpPage"
+             x:Class="RanCyan.Views.LotteryMobilePage"
              x:Name="this"
              Title="{Binding Title.Value}">
 
@@ -28,11 +28,6 @@
   </ContentPage.Resources>
 
   <Grid>
-    <Grid.ColumnDefinitions>
-      <ColumnDefinition Width="*" />
-      <ColumnDefinition Width="{Binding SelectionViewWidth.Value}" />
-    </Grid.ColumnDefinitions>
-    <BoxView Grid.Column="0" BackgroundColor="{Binding BackgroundColor.Value}"/>
     <Grid Grid.Column="0">
       <Grid.RowDefinitions>
         <RowDefinition Height="*"/>
@@ -55,36 +50,8 @@
           </DataTrigger>
         </Image.Triggers>
       </Image>
-      <!-- 抽選結果(シングル) -->
-      <Label Grid.Row="0" 
-             Style="{StaticResource LabelStyle}"
-             Text="{Binding LotteryCategorySelectedModel.Value.LotteryLabelModel.Text}" 
-             TextColor="{Binding LotteryCategorySelectedModel.Value.LotteryLabelModel.Color}" 
-             IsVisible="{Binding IsNotAllToDraw.Value}">
-      </Label>
-      <!-- 抽選結果(オール) -->
-      <ListView Grid.Row="0" 
-                Grid.RowSpan="2"
-                ItemsSource="{Binding LotteryCategoryModels}"
-                IsVisible="{Binding IsAllToDraw.Value}"
-                SelectionMode="None">
-        <ListView.ItemTemplate>
-          <DataTemplate>
-            <ViewCell>
-              <Grid>
-                <Label FontSize="16"
-                       Text="{Binding Title}" 
-                       TextColor="{Binding LotteryLabelModel.Color}" />
-                <Label Style="{StaticResource LabelStyle}"
-                       Text="{Binding LotteryLabelModel.Text}" 
-                       TextColor="{Binding LotteryLabelModel.Color}" />
-              </Grid>
-            </ViewCell>
-          </DataTemplate>
-        </ListView.ItemTemplate>
-      </ListView>
     </Grid>
-    <Grid Grid.Column="1">
+    <Grid Grid.Column="0" Opacity="0.5">
       <Grid.RowDefinitions>
         <RowDefinition Height="8*"/>
         <RowDefinition Height="*"/>
@@ -97,7 +64,7 @@
           <DataTemplate>
             <Grid VerticalOptions="FillAndExpand">
               <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="100" />
+                <ColumnDefinition Width="80" />
               </Grid.ColumnDefinitions>
               <views:LotteryCategorySelectionView BindingContext="{Binding}"/>
             </Grid>
@@ -114,5 +81,4 @@
       </Grid>
     </Grid>
   </Grid>
-
 </ContentPage>
