--- a/RanCyan/RanCyan/Views/LotteryConfigLotteryModelSettingView.xaml
+++ b/RanCyan/RanCyan/Views/LotteryConfigLotteryModelSettingView.xaml
@@ -5,9 +5,19 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              x:Class="RanCyan.Views.LotteryConfigLotteryModelSettingView">
-  <ContentView.Content>
-      <StackLayout>
-          <Label Text="Hello Xamarin.Forms!" />
-      </StackLayout>
-  </ContentView.Content>
+  <Grid>
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition Width="*" />
+      <ColumnDefinition Width="80" />
+      <ColumnDefinition Width="40" />
+      <ColumnDefinition Width="40" />
+      <ColumnDefinition Width="40" />
+    </Grid.ColumnDefinitions>
+    <Entry Grid.Column="0" Text="{Binding Name.Value}"/>
+    <Entry Grid.Column="1" Text="{Binding Ratio.Value}"/>
+    <Button Grid.Column="2" Text="↑"/>
+    <Button Grid.Column="3" Text="↓"/>
+    <Button Grid.Column="4" Text="消去"/>
+  </Grid>
+
 </ContentView>
